# MusChem

./: .gitignore  Debug.rar  MusChem.sln  MusChem.vcxproj  MusChem.vcxproj.filters
MusChem/: BuildExec  CleanAll  MusChem.vcxproj  MusChem.vcxproj.filters
MusChem/configs/: controls.conf  graphics.conf
MusChem/lib/: SOIL.lib  portaudio_x86.lib
MusChem/shaders/LineShader/: fragment.glsl  vertex.glsl
MusChem/shaders/ScreenShader/: vertex.glsl
MusChem/shaders/SquareShader/: fragment.glsl  vertex.glsl
MusChem/src/: CMakeLists.txt  main.cpp
MusChem/src/Generic/: GLheaders.h
MusChem/src/Generic/GList/: GList.h
MusChem/src/Generic/GParser/: GParser.h
MusChem/src/Modules/Audio/: CMakeLists.txt  Envelope.cpp  Envelope.h  Keyboard.cpp  Keyboard.h
MusChem/src/Modules/Graphics/: CMakeLists.txt  Camera.cpp  Camera.h  Constants.h  DiscSlider.cpp  DiscSlider.h  Graph.cpp  Graph.h  Graphics.cpp  Shader.cpp  Shader.h  Slider.cpp  Slider.h  SpriteSheet.cpp  SpriteSheet.h  Switch.h
MusChem/src/Modules/Input/: Command.h  Cursor.h  Input.cpp  Input.h
MusChem/src/Modules/Text/: CMakeLists.txt  Font.h  Text.h  TextBoard.h
MusChem/src/Systems/: CMakeLists.txt  Systems.cpp
configs/: controls.conf  graphics.conf
lib/: SOIL.lib  freetype.lib
objs/MusChem.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MusChem.lastbuildstate  MusChem.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
shaders/PrimShader/: fragment.glsl  vertex.glsl
shaders/ScreenShader/: fragment.glsl
src/: CMakeLists.txt  main.cpp
src/Generic/: GCodes.h  GUtils.h
src/Generic/GLogger/: CMakeLists.txt  GLogger.c  GLogger.h
src/Generic/GParser/: CMakeLists.txt  GParser.cpp
src/Modules/Audio/: CMakeLists.txt  Envelope.cpp  Envelope.h  Keyboard.cpp  Keyboard.h
src/Modules/GUI/: CMakeLists.txt  DiscSlider.cpp  (+3 more)
src/Systems/: BasicModules.h  DebugModules.h
(+11 files in other folders)
